--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-horizontal-datepicker": "^2.0.3",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
