--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-horizontal-datepicker": "^2.0.3",
+    "react-horizontal-datepicker": "git+https://github.com/fathurifki/react-horizontal-datepicker.git",
     "react-ratings-declarative": "^3.4.1",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
